@@ -332,9 +332,7 @@ int main(
       int con;
       char *def_server, *pserver, *servername;
       struct batch_status *bstatus, *pbstat;
-#ifdef MOMCTLSKIPDOWN
       struct attrl *nodeattrs;
-#endif
 
       def_server=pbs_default();
 
@@ -363,7 +361,6 @@ int main(
         {
         for (pbstat = bstatus;pbstat != NULL;pbstat = pbstat->next)
           {
-#ifdef MOMCTLSKIPDOWN
           /* check state first, only do_mom() if not down */
           for (nodeattrs = pbstat->attribs;nodeattrs != NULL; nodeattrs = nodeattrs->next)
             {
@@ -380,9 +377,6 @@ int main(
               break;
               } /* END if (attrib name eq state) */
             } /* END foreach nodeattrib */
-#else
-          do_mom(pbstat->name,MOMPort,CmdIndex) >= 0 ? HostCount++ : FailCount++;
-#endif
           } /* END foreach node */
 
         pbs_statfree(bstatus);
